@@ -10,6 +10,7 @@
     * Add Net::SSLeay::SSL_CTX#set1_groups_list method.
     * Add Net::SSLeay::SSL_CTX#set1_curves_list method.
     * Add Net::SSLeay#set_tlsext_status_type method.
+    * Add Net::SSLeay#alert_desc_string_long method.
     
 0.009 2024-11-08
   [Requirement Changes]
